--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "laravelcollective/html": "5.3.*"
+        "laravelcollective/html": "5.3.*",
+        "laracasts/flash": "^2.0",
+        "cviebrock/eloquent-sluggable": "^4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -21,7 +23,8 @@
             "database"
         ],
         "psr-4": {
-            "ESCOJ\\": "app/"
+            "ESCOJ\\": "app/",
+            "EscojLB\\": "app/EscojLB"
         }
     },
     "autoload-dev": {
