Add a avatar preview, add a system of confirmation account, addlogic when the email change, add login whit social network github, add styles into the login form, add the recaptcha to the registration form, add the terms of services

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,10 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+NOCAPTCHA_SECRET=
+NOCAPTCHA_SITEKEY=
+
+GITHUB_ID=client id from github
+GITHUB_SECRET=client secret from github
+GITHUB_URL=http://myapp.net/auth/github/callback
