directory where store the submissions changed, start changing the clang compiler for gcc compiler, logic when submit a problem only show the languages available for this problem done

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,10 @@ PUSHER_SECRET=
 NOCAPTCHA_SECRET=
 NOCAPTCHA_SITEKEY=
 
+FB_ID=client id from fb
+FB_SECRET=client secret from fb
+FB_URL=http://www.escoj.com/auth/callback/facebook
+
 GITHUB_ID=client id from github
 GITHUB_SECRET=client secret from github
-GITHUB_URL=http://myapp.net/auth/github/callback
+GITHUB_URL=http://www.escoj.com/auth/callback/github
