compiling with gcc without any kind of trick

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,5 @@ FB_URL=http://www.escoj.com/auth/callback/facebook
 GITHUB_ID=client id from github
 GITHUB_SECRET=client secret from github
 GITHUB_URL=http://www.escoj.com/auth/callback/github
+
+PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
